--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,9 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant == 'is_open':\n",
-    "            return restuarants"
+    "            return restuarants\n",
+    "        else:\n",
+    "            return"
    ]
   },
   {
