Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,9 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant == 'is_open':\n",
-    "            return restuarants\n",
-    "        else:\n",
-    "            return"
+    "            return restuarants"
    ]
   },
   {
