--- a/index.ipynb
+++ b/index.ipynb
@@ -292,6 +292,7 @@
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            open.append(restaurant)\n",
+    "        return open\n",
     "        "
    ]
   },
